<resources>
    <string name="app_name">MarseloO2</string>

    <!-- login -->
    <string name="login_title">Iniciar sesión</string>
    <string name="login_txt_mail">Correo electrónico</string>
    <string name="login_btn">Iniciar sesión</string>
    <string name="login_subtxt">¿Aún no tienes cuenta?</string>
    <string name="login_txt_register">Regístrate aquí  ></string>
    <string name="login_introduce_contra">Introduce una contraseña válida</string>
    <string name="login_introduce_correo_ok">Introduce un correo válido</string>
    <string name="login_datos_incorrectos">"Los datos introducidos no son correctos."</string>

    <!-- registro -->
    <string name="register_title">Registro</string>
    <string name="register_username">Nombre de usuario</string>
    <string name="register_txt_mail">Correo electrónico</string>
    <string name="register_password">Contraseña</string>
    <string name="register_town">Seleccione su municipio</string>
    <string name="register_txtfinal">¿Ya te has registrado?</string>
    <string name="register_txtbutton_final">Registrarse</string>
    <string name="register_introduce_username">Introduce un usuario válido</string>
    <string name="register_introduce_town">Seleccione un municipio</string>
    <string name="register_repeatpass">Confirme su contraseña</string>
    <string name="register_repeatpassF">Asegúrese de que las contraseñas coincidan</string>


    <!--perfil-->
    <string name="profile_recorrido">Recorrido</string>
    <string name="profile_info">Editar Usuario</string>
    <string name="profile_link_device">Vincular dispositivo</string>
    <string name="profile_encontrar_device">Encontrar dispositivo</string>
    <string name="profile_config">Configuración</string>
    <string name="profile_logout">Cerrar sesión</string>

    <string name="profile_name">Nombre</string>
    <string name="profile_lastname">Apellido</string>

    <!--informacion usuario-->
    <string name="userinfo_button_edit">Editar</string>
    <string name="userinfo_name">Nombre</string>
    <string name="userinfo_role">Trabajador de </string>
    <string name="userinfo_mail_txt">Correo electrónico</string>
    <string name="userinfo_mail">tucorreo@gmail.com</string>
    <string name="userinfo_town_txt">Municipio</string>
    <string name="userinfo_town">Teulada</string>

    <!--editar usuario-->
    <string name="edituser_tittle">Editar perfil</string>
    <string name="edituser_changephoto">Cambiar foto</string>
    <string name="edituser_username">Nombre de usuario</string>
    <string name="edituser_mail">Correo electrónico</string>
    <string name="edituser_password">Contraseña</string>
    <string name="edituser_town">Seleccione su municipio</string>

    <!--guia de gases-->
    <string name="gasguide_tittle">Información adicional</string>
    <string name="gasguide_particulas">Partículas PM</string>
    <string name="gasguide_ozone">Ozono</string>
    <string name="gasguide_no2">Dióxido de nitrógeno</string>
    <string name="gasguide_so2">Dióxido de azufre</string>
    <string name="gasguide_pb">Plomo</string>
    <string name="gasguide_cd">Cadmio</string>
    <string name="gasguide_clickmore">Pulse para ver más</string>

    <!--informacion de gases-->
    <string name="gasinfo_tittle">Ozono (O3)</string>
    <string name="gasinfo_values">Valores</string>
    <string name="gasinfo_descrip">Descripción</string>
    <string name="gasinfo_txtvalues">120 μg/m3 de media en 8h</string>
    <string name="gasinfo_txtinfo">180 μg/m3 de media en 8h</string>
    <string name="gasinfo_txtalert">240 μg/m3 de media en 8h</string>
    <string name="gasinfo_txtdescript">El ozono es uno de los principales componentes de la niebla tóxica. Éste se forma por la reacción con la luz solar (fotoquímica) de contaminantes como los óxidos de nitrógeno procedentes de las emisiones de vehículos o la industria y los compuestos orgánicos volátiles emitidos por los vehículos, los disolventes y la industria. Los niveles de ozono más elevados se registran durante los períodos de tiempo soleado. El exceso de ozono en el aire puede producir efectos adversos de consideración en la salud humana. Puede causar problemas respiratorios, provocar asma, reducir la función pulmonar y causar graves enfermedades. </string>


    <!--notificaciones-->
    <string name="notification_tittle">Notificaciones</string>
    <string name="notification_filter">Filtro</string>
    <string name="notification_flush">Vaciar</string>


    <!--dias de la semana-->
    <string name="lun">lun</string>
    <string name="mar">mar</string>
    <string name="mie">mie</string>
    <string name="jue">jue</string>
    <string name="vie">vie</string>
    <string name="sab">sab</string>
    <string name="dom">dom</string>


    <!--semanas-->
    <string name="sem">Sem</string>

    <string name="sem1">sem1</string>
    <string name="sem2">sem2</string>
    <string name="sem3">sem3</string>
    <string name="sem4">sem4</string>
    <string name="sem5">sem5</string>


    <!--dias de la semana-->
    <string name="jan">Ene</string>
    <string name="feb">Feb</string>
    <string name="march">Mar</string>
    <string name="apr">Abr</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Ago</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dic">Dic</string>

    <string name="distancia">Distancia</string>
    <string name="camino">Camino</string>
    <string name="calor_as">Calorías</string>
    <string name="pasos">Pasos</string>
    <string name="mes">Mes</string>
    <string name="a_o">Año</string>


    <!-- Vincular dispositivo -->
    <string name="tittle_newDevice">Vincular dispositivo</string>
    <string name="subtittle_newDevice">Pasos para vincular un nuevo dispositivo</string>
    <string name="body_newDevice">Necesitamos verificar su información del dispositivo.</string>
    <string name="body2_newDevice">Por favor siga los pasos de abajo para procesar su dispositivo.</string>
    <string name="step1_newDevice">Paso 1</string>
    <string name="step2_newDevice">Paso 2</string>
    <string name="step3_newDevice">Paso 3</string>
    <string name="step3_modelText_newDevice">Modelo:</string>
    <string name="step1Text_newDevice">Escanear código QR</string>
    <string name="step2Text_newDevice">Añadir información</string>
    <string name="step3Text_newDevice">Comprobar datos</string>
    <string name="step1Text_newDeviceQR">Escanear código QR</string>
    <string name="snack_qr_error">El QR no es de MarseloO2.</string>
    <!--    activity Vincular dispositivo: step3 bottom sheet-->
    <string name="step3tittle_bottom_sheet">Verificación de los datos</string>
    <string name="step3image_state">Estado</string>
    <string name="step3_empty">Paso no completado</string>
    <string name="step3_favorite">Favoritos</string>
    <string name="step3_favorite_yes">Si</string>
    <string name="step3_favorite_no">No</string>
    <string name="snack_steps_remain">Faltan pasos por hacer.</string>


    <!-- cerrar sesion alert -->
    <string name="deleteText_dialog">¿Seguro que quieres salir de tu cuenta de MarseloO2?</string>
    <string name="cancelButton_dialog">Cancelar</string>
    <string name="deleteConfirmButton_dialog">Cerrar sesión</string>

    <!-- cerrar sesion alert -->
    <string name="clearConfirmButton_dialog">Limpiar</string>
    <string name="clearText_dialog">¿Seguro que quieres eliminar todas las notificaciones recibidas?</string>

    <!-- pantalla principal -->
    <string name="txt_home_bienvenida">Bienvenido,</string>


    <!-- Configuration -->
    <string name="tema">Tema</string>
    <string name="notificaciones">Administrar notificaciones</string>
    <string name="web">Web MarseloO2</string>
    <string name="comentarios">Enviar Comentarios</string>
    <string name="politica">Política de privacidad</string>
    <string name="version">Versión de la aplicación</string>

    <!-- RecyclerView Notifications -->
    <string name="empty_primary_text">No hay ninguna notificación todavía</string>
    <string name="empty_secondary_text">Deslice hacia abajo para actualizar la lista</string>



</resources>